--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,9 @@ jobs:
       - name: Build package
         run: npm run build
 
+      - name: Run integration tests
+        run: npm run test:integration
+
       - name: Verify build output
         run: |
           if [ ! -f "dist/index.js" ] || [ ! -f "dist/index.d.ts" ]; then
