--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stringinject",
-  "version": "2.1.0",
+  "name": "@tronin/stringinject",
+  "version": "2.2.1",
   "description": "Inject an array of items in to a string replacing selected values.",
   "type": "module",
   "exports": "./dist/index.js",
@@ -19,19 +19,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tjcafferkey/stringinject.git"
+    "url": "git+https://github.com/ts-ign0re/stringinject.git"
   },
-  "author": "Tom Cafferkey",
+  "author": "Tom Cafferkey, Tronin Denis",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tjcafferkey/stringinject/issues"
+    "url": "https://github.com/ts-ign0re/stringinject/issues"
   },
   "keywords": [
     "string",
     "replace",
     "inject"
   ],
-  "homepage": "https://github.com/tjcafferkey/stringinject#readme",
+  "homepage": "https://github.com/ts-ign0re/stringinject#readme",
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/mocha": "^10.0.0",
